优化图标居中显示，修改标题为超声词汇加油站

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="超声词汇">
-    <title>小霖的超声词汇加油站</title>
+    <title>超声词汇加油站</title>
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="icon-192.png">
     <style>
@@ -67,28 +67,16 @@
         }
 
         header h1 {
-            font-size: 2.5rem;
-            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 50%, #a18cd1 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            margin-bottom: 10px;
-            font-weight: 800;
-            text-shadow: 2px 2px 4px rgba(255, 154, 158, 0.3);
-            animation: bounce 2s ease-in-out infinite;
+            font-size: 1.5rem;
+            color: #555;
+            margin-bottom: 5px;
+            font-weight: 600;
         }
 
-        header p.subtitle {
-            font-size: 1rem;
-            color: #a18cd1;
+        header p {
+            font-size: 0.9rem;
+            color: #888;
             margin-top: 0;
-            font-weight: 500;
-            letter-spacing: 2px;
-        }
-
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-5px); }
         }
 
         /* 3D Flip Card */
@@ -355,8 +343,8 @@
     <div class="glass-container">
         <button class="reset-btn" onclick="重置进度()" title="重置进度">↻ Reset</button>
         <header>
-            <h1>霖霖宝宝</h1>
-            <p class="subtitle">超声词汇学习</p>
+            <h1>超声词汇加油站</h1>
+            <p>Today is a good day to learn</p>
         </header>
 
         <div class="card-scene" onclick="切换翻转()">
